--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Русско-таджикский словарь</string>
+    <string name="app_name">Русско-узбекский словарь</string>
     <string name="type_here_to_filter">Введите здесь фильтр</string>
     <string-array name="dicts">
-        <item>русско-таджикский</item>
-        <item>таджикско-русский</item>
+        <item>русско-узбекский</item>
+        <item>узбекско-русский</item>
     </string-array>
 
 
