[refactor]Extracted DB to bean, [add]ChooseLanguageActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Russian-Tatar Dictionary</string>
+    <string name="app_name">Phrase book</string>
+    <string name="choose_language">Choose language</string>
     <string name="type_here_to_filter">Type here to filter</string>
     <string-array name="dicts">
         <item>Russian-Tatar</item>
@@ -14,4 +15,7 @@
     <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
     <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4685960408834415/3271412290</string>
 
+    <string-array name="languages">
+        <item>Uzbek</item>
+    </string-array>
 </resources>
