[add]Complete apps

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Русско-татарский словарь</string>
     <string name="type_here_to_filter">Введите здесь фильтр</string>
-    <string-array name="dicts">
-        <item>русско-татарский</item>
-        <item>татарско-русский</item>
-    </string-array>
-
 
     <string name="please_wait">Подождите...</string>
     <string name="first_time_load">При первом запуске нужно немного времени, чтобы прогрузить словари.</string>
+    <string name="choose_language">Выберите язык</string>
 
+    <string-array name="direct_translation">
+        <item>Русско-узбекский</item>
+        <item>Русско-таджикский</item>
+        <item>Русско-киргизский</item>
+        <item>Русско-казахский</item>
+        <item>Русско-азербайджанский</item>
+    </string-array>
+
+    <string-array name="reverse_translation">
+        <item>Узбекско-русский</item>
+        <item>Таджикско-русский</item>
+        <item>Киргизско-русский</item>
+        <item>Казахско-русский</item>
+        <item>Азербайджанско-русский</item>
+    </string-array>
 </resources>
